--- a/index.html
+++ b/index.html
@@ -2,10 +2,6 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link
-			rel="icon"
-			type="image/svg+xml"
-			href="/vite.svg" />
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0" />
@@ -32,6 +28,7 @@
 		<meta
 			name="theme-color"
 			content="#ffffff" />
+		<link rel=“stylesheet” type=“text/css” href=“assets/style.css” />
 		<title>ChecknGo</title>
 	</head>
 	<body>
