--- a/es/index.html
+++ b/es/index.html
@@ -33,6 +33,8 @@
 			name="theme-color"
 			content="#ffffff" />
 		<title>ChecknGo</title>
+		<script type="module" crossorigin src="/assets/main-CTQso3SV.js"></script>
+		<link rel="stylesheet" crossorigin href="/assets/main-BPB0nTQF.css">
 	</head>
 	<body>
 		<header
@@ -363,8 +365,5 @@
 				</script>
 			</span>
 		</div>
-		<script
-			type="module"
-			src="/main.js"></script>
 	</body>
 </html>
