--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 			content="#ffffff" />
 		<link rel=“stylesheet” type=“text/css” href=“assets/style.css” />
 		<title>ChecknGo</title>
+		<script type="module" crossorigin src="/assets/main-CTQso3SV.js"></script>
+		<link rel="stylesheet" crossorigin href="/assets/main-BPB0nTQF.css">
 	</head>
 	<body>
 		<header
@@ -353,8 +355,5 @@
 				</script>
 			</span>
 		</div>
-		<script
-			type="module"
-			src="/main.js"></script>
 	</body>
 </html>
