--- a/index.html
+++ b/index.html
@@ -8,30 +8,29 @@
 		<link
 			rel="apple-touch-icon"
 			sizes="180x180"
-			href="/apple-touch-icon.png" />
+			href="/checkngo.pro/apple-touch-icon.png" />
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="32x32"
-			href="/favicon-32x32.png" />
+			href="/checkngo.pro/favicon-32x32.png" />
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="16x16"
-			href="/favicon-16x16.png" />
+			href="/checkngo.pro/favicon-16x16.png" />
 		<link
 			rel="manifest"
-			href="/site.webmanifest" />
+			href="/checkngo.pro/site.webmanifest" />
 		<meta
 			name="msapplication-TileColor"
 			content="#da532c" />
 		<meta
 			name="theme-color"
 			content="#ffffff" />
-		<link rel=“stylesheet” type=“text/css” href=“assets/style.css” />
 		<title>ChecknGo</title>
-		<script type="module" crossorigin src="/assets/main-CTQso3SV.js"></script>
-		<link rel="stylesheet" crossorigin href="/assets/main-BPB0nTQF.css">
+		<script type="module" crossorigin src="/checkngo.pro/assets/main-CTQso3SV.js"></script>
+		<link rel="stylesheet" crossorigin href="/checkngo.pro/assets/main-BPB0nTQF.css">
 	</head>
 	<body>
 		<header
@@ -50,12 +49,12 @@
 				class="flex gap-[40px] text-blue overflow-hidden max-lsm:col-span-2 max-lsm:flex-col max-lsm:gap-[16px]">
 				<a
 					class="text-[14px]"
-					href="/es/"
+					href="/checkngo.pro/es/"
 					>ESP</a
 				>
 				<a
 					class="text-[14px]"
-					href="/"
+					href="/checkngo.pro/"
 					>ENG</a
 				>
 			</nav>
