Feat. Templates, lang and friends

--- a/pages/terms-and-conditions/index.html
+++ b/pages/terms-and-conditions/index.html
@@ -4,7 +4,7 @@
 	<body id="body">
 		{{!core/header!}}
 		<section
-			class="terms-and-conditions-container max-w-[1000px] mx-[auto] px-[40px] hidden">
+			class="terms-and-conditions-container max-w-[1000px] mx-[auto] px-[40px]">
 			<h1 class="text-[52px]"><strong>Términos y condiciones</strong></h1>
 			<p>
 				Por favor, lea detenidamente las siguientes condiciones de servicio (las
