Fix. Success proposal animation

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 				</h2>
 				<p class="mb-[1.5rem]">{{We will contact you shortly}}.</p>
 			</div>
-			<div
+			<div id="form_proposal_container" class="transition-opacity duration-500 ease-in-out"
 				class="max-w-[582px] flex flex-col w-full max-lg:max-w-[537px] max-lsm:max-w-[480px] max-lsm:px-[30px]">
 				<h2 class="text-[48px] max-lsm:text-[24px]">{{Discover Check & Go}}</h2>
 				<p class="mb-[1.5rem]">
