--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+	
 	{{!core/head!}}
 	<body id="body">
 		{{!core/header!}}
@@ -135,11 +136,13 @@
 		<section
 			data-aos="fade-up"
 			class="bg-lavender flex flex-col items-center py-[120px]">
-			<div id="form_success_message_container" class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 h-full flex flex-col justify-center align-middle bg-lavender opacity-0 pointer-events-none transition-opacity duration-500 ease-in-out">
-				<h2 class="text-[35px] max-lsm:text-[24px]">
-					{{Thank you for filling out the form}}.
-				</h2>
-				<p class="mb-[1.5rem]">{{We will contact you shortly}}.</p>
+			<div id="form_success_message_container" class="bg-lavender h-full w-full opacity-0 pointer-events-none transition-opacity duration-500 ease-in-out absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
+				<div  class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 flex flex-col justify-center align-middle">
+					<h2 class="text-[35px] max-lsm:text-[24px]">
+						{{Thank you for filling out the form}}.
+					</h2>
+					<p class="mb-[1.5rem]">{{We will contact you shortly}}.</p>
+				</div>
 			</div>
 			<div id="form_proposal_container" class="transition-opacity duration-500 ease-in-out"
 				class="max-w-[582px] flex flex-col w-full max-lg:max-w-[537px] max-lsm:max-w-[480px] max-lsm:px-[30px]">
